@@ -380,6 +380,7 @@ private:
 	DECLARE_DYNTRANS_INSTR(mak);
 	DECLARE_DYNTRANS_INSTR(mak_imm);
 	DECLARE_DYNTRANS_INSTR(mulu_imm);
+	DECLARE_DYNTRANS_INSTR(bsr);
 	DECLARE_DYNTRANS_INSTR(bsr_samepage);
 	DECLARE_DYNTRANS_INSTR(bsr_functioncalltrace);
 	DECLARE_DYNTRANS_INSTR(jmp_n);
